--- a/portal/templates/base.html.j2
+++ b/portal/templates/base.html.j2
@@ -26,8 +26,8 @@
                     <span>{{ config["SITE_NAME"] }}</span>
                 </a>
                 <ul class="nav-menu">
-                    <li><a href="#" class="nav-link">Groups</a></li>
-                    <li><a href="#" class="nav-link">Events</a></li>
+                    <li><a href="#" class="nav-link">Logout</a></li>
+                    <li><a href="#" class="nav-link">Back to our website</a></li>
                 </ul>
             </nav>
         </header>
