--- a/portal/templates/base.html.j2
+++ b/portal/templates/base.html.j2
@@ -26,7 +26,7 @@
                     <span>{{ config["SITE_NAME"] }}</span>
                 </a>
                 <ul class="nav-menu">
-                    <li><a href="#" class="nav-link">Logout</a></li>
+                    <li><a href="{{ url_for('main.logout') }}" class="nav-link">Logout</a></li>
                     <li><a href="#" class="nav-link">Back to our website</a></li>
                 </ul>
             </nav>
